; ModuleID = '/home/carl/AnghaBench/poco/SevenZip/src/extr_7zIn.c_SzReadNumber32.c'
source_filename = "/home/carl/AnghaBench/poco/SevenZip/src/extr_7zIn.c_SzReadNumber32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SZ_ERROR_UNSUPPORTED = common dso_local global i32 0, align 4
@SZ_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*)* @SzReadNumber32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SzReadNumber32(i32* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @SzReadNumber(i32* %7, i32* %6)
  %9 = call i32 @RINOK(i32 %8)
  %10 = load i32, i32* %6, align 4
  %11 = icmp uge i32 %10, -2147483648
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @SZ_ERROR_UNSUPPORTED, align 4
  store i32 %13, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = icmp sge i32 %15, undef
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = load i32, i32* @SZ_ERROR_UNSUPPORTED, align 4
  store i32 %18, i32* %3, align 4
  br label %24

19:                                               ; preds = %14
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = load i64*, i64** %5, align 8
  store i64 %21, i64* %22, align 8
  %23 = load i32, i32* @SZ_OK, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %19, %17, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @RINOK(i32) #1

declare dso_local i32 @SzReadNumber(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
